# EfficientPose

./: CMakeLists.txt  README.md  custom_load_weights.py  debug.py  package.xml  train.py
config/: efficient_pose.yaml
generators/: custom.py
launch/: efficient_pose.launch
src/: custom_load_weights.py  debug.py  evaluate.py  inference.py  inference_ros.py  requirements.txt  train.py
src/eval/: common.py
src/generators/: custom.py
src/utils/: compute_overlap.c  visualization.py
